# fastapi-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yml  pyproject.toml
src/: main.py
src/api/v1/: __init__.py  user_route.py
src/domain/dtos/user/: user_data.py
src/domain/entities/: __init__.py  project.py  todo.py  user.py
src/domain/repositories/: __init__.py  project_repository.py  todo_repository.py  user_repository.py
src/domain/security/: data_crypto.py  token.py
src/domain/usecases/auth/: login.py
src/domain/usecases/user/: __init__.py  create_user.py  list_users.py
src/infrastructure/: config.py  container.py  database.py
src/infrastructure/alembic/: env.py
src/infrastructure/alembic/versions/: 63f2945b7381_init.py  c2c37e3825fc_init.py  cf6f73a89e77_init_tables.py
src/infrastructure/api/: main.py
src/infrastructure/api/routes/: user_route.py
src/infrastructure/models/: __init__.py  project.py  todo.py  user.py
src/infrastructure/pg_repositories/: __init__.py  user_repository.py
src/infrastructure/repositories/pg/: project_repository.py  todo_repository.py  user_repository.py
src/infrastructure/security/fernet/: fernet_data_crypto.py
src/infrastructure/security/jwt/: token.py
