[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["leokoike <leokoike@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
SQLAlchemy = {version = "*", extras = ["asyncio", "mypy"]}
pydantic-settings = "*"
alembic = "*"
orjson = "*"
asyncpg = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pyproject-flake8 = "*"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
    |   \.git
    |   \.hg
    |   \.mypy_cache
    |   \.tox
    |   \.venv
    |   _build
    |   buck-out
    |   build
    |   dist
    |   mongo
    |   src/infrastructure/alembic
    )/
)
'''

[tool.flake8]
exclude = [".git", "__pycache__", "build", "dist", "src/infrastructure/alembic"]
max-line-length = 120
max-complexity = 10

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
